updated readme, html appearance

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <br>
     <form>
         <label for="cipherKey">Cipher Key:</label><br>
-        <input type="text" id="cipherKey" name="cipherKey" value="palimpsest"><br>
+        <input type="text" id="cipherKey" name="cipherKey" value="palimpsest">
+        <br><br>
         
         <label for="offset">Offset:</label>
         <input type="number" id="offset" value=0 size=3 onclick="js();">
@@ -82,7 +83,6 @@
     </form>
 
     <br>
-    <p></p>
     <textarea id="outputText" name="outputText" readonly rows="6" cols="80"></textarea>
 
 </body>
