Changed default message in html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <br>
     <form>
         <label for="cipherKey">Cipher Key:</label><br>
-        <input type="text" id="cipherKey" name="cipherKey" value="palimpsest">
+        <input type="text" id="cipherKey" name="cipherKey" value="poetry">
         <br><br>
         
         <label for="offset">Offset:</label>
@@ -69,7 +69,7 @@
         <br><br>
 
         <label for="cipherText">Text:</label><br>
-        <textarea id="cipherText" name="cipherText" rows="6" cols="80">ppzkmaqtkxqiwtudfwvxpdpvpdxagkad</textarea>
+        <textarea id="cipherText" name="cipherText" rows="6" cols="80">wctxzqivimygcuabkfusemycggxarresvvychwrmychcyerlsgmgxqivimlltkmmymjhxavudfhlrlsbiovphhsijyiope</textarea>
         <br><br>
 
         <label for="decrypt">Decrypt</label>
