--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cipher</title>
     <link rel="stylesheet" href="styles.css">
-    <<script type="text/javascript" src="ciphy.js"></script>
+    <script type="text/javascript" src="ciphy.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
 
 
