--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>A primative Vigenère cipher thingy</h1>
+    <h1>A primitive Vigenère cipher thingy</h1>
     <p></p>
     <br>
     <form>
