--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
     <br>
     <textarea id="outputText" name="outputText" readonly rows="6" cols="80"></textarea>
-
+    <br><br>
+    <noscript><span class="redText">This page requires JavaScript to work, as GitHub Pages does <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#static-site-generators">not support server-side computation.</a></span></noscript>
+    <br><br>
+    <noscript><span class="redText">You can view the sourcecode of this page <a href="https://github.com/flashdas/cipher">here.</a></span></noscript>
 </body>
 </html>
