added ability to pre-fill form using hash

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <script type="text/javascript" src="ciphy.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
 
+    
 
 </head>
 
-<body>
+<body onload="setUrlParams();">
     <h1>A primitive Vigenère cipher thingy</h1>
     <p></p>
     <br>
@@ -45,5 +46,7 @@
     <noscript><span class="redText">This page requires JavaScript to work, as GitHub Pages does <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#static-site-generators">not support server-side computation.</a></span></noscript>
     <br><br>
     <noscript><span class="redText">You can view the sourcecode of this page <a href="https://github.com/flashdas/cipher">here.</a></span></noscript>
+
+    
 </body>
 </html>
