--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body onload="setUrlParams();VigenereCipher();">
     <h1>A primitive Vigenère cipher thingy</h1>
-    <p> This is the <a href="">Standard Vigniere cipher</a> (one key).
-    For the kyrptos cipher, see <a href="Kryptos.html">this page</a>.</p>
-    <p></p>
+    <p> This is the <a href="https://en.wikipedia.org/wiki/Vigen%C3%A8re_cipher">
+    Standard Vigniere cipher</a> (one key). For the kyrptos cipher, see 
+    <a href="Kryptos.html">this page</a>.</p>
     <br>
     <form>
         <label for="cipherKey">Cipher Key: </label>
