Restructured website, added clear and swap buttons.
Created home page home.html
Moved the Vigenere tool from index.html to Vigenere.html
Replaced index.html with a redirect

Added a clear button to Vigenere
Added a default button to Vigenere, changed the default loading
	behavior to match kryptos (run a js function instead of
	default values in html)
Added a swap button to Vigenere and Kryptos

--- a/Kryptos.html
+++ b/Kryptos.html
@@ -8,22 +8,23 @@
     <script type="text/javascript" src="ciphy.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
-<body onload="k1(); kryptos();">
+
+<body onload="k1(); setUrlParams(); kryptos();">
     <h1>Kryptos </h1>
-    <p>This page contains miscellaneous ciphers used by 
+    <p>This page contains the pseudo Vigenere cipher used by 
         <a href="https://math.ucsd.edu/~crypto/Projects/KarlWang/index2.html">
-        Kyrptos</a>. For the regular Vigenère cipher, see 
-        <a href="index.html">this page</a>.
-    <br>Note that Key 2 should not contain duplicate letters.</p>
+        Kyrptos</a>. For the regular Vigenère cipher, see <a href="Vigenere.html">this page</a>.
+    </p>
 
     <noscript><span class="redText">This page requires JavaScript to work, as GitHub Pages does 
         <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#static-site-generators">not support server-side computation.</a></span></noscript>
     <br><br>
     <noscript><span class="redText">You can view the sourcecode of this page <a href="https://github.com/flashdas/cipher">here.</a></span></noscript>
     
-    <h2>Kryptos parts 1 and 2:</h2>
+    <h2><a id="Kyrptos1_2">Kryptos parts 1 and 2:</a></h2>
         <p>Kryptos uses two keys in its cipher. One is the standard Vigenère key, 
-            while the other is used to re-order the alphabet.
+            while the other is used to re-order the alphabet. Leaving key 2 blank will use the standard
+            Vigenere chipher.
         </p>
         <br>
         <form>
@@ -36,7 +37,7 @@
             <input type="text" id="key1" name="key1" value="" onBlur="kryptos();">
             <label for="key2">Key 2: </label>
             <input type="text" id="key2" name="key2" value="" onBlur="kryptos();">
-            <input type="button" value="Swap Keys" onClick="swap();kryptos();">
+            <input type="button" value="Swap Keys" onClick="swapKeys();kryptos();">
             <br><br>
 
             <label for="alphabet">Alphabet created by Key 2: </label>
@@ -62,10 +63,10 @@
         <br><br>
 
 
-    <h2>Kryptos part 3:</h2>
+    <h2><a id="Kyrptos3">Kryptos part 3:</a></h2>
     <p>Currently not implemented, See link above for guide.</p><br>
 
-    <h2>Kryptos part 4:</h2>
+    <h2><a id="Kyrptos4">Kryptos part 4:</a></h2>
     <p>At time of writting, not currently solved. Check 
         <a href="https://elonka.com/kryptos/">https://elonka.com/kryptos/</a> 
         for the most up to date info.
