Added top bar navigation
Added missing swap button from Kryptos

--- a/Vigenere.html
+++ b/Vigenere.html
@@ -13,6 +13,13 @@
 </head>
 
 <body onload="v1(); setUrlParams();VigenereCipher();">
+    <div class="topnav">
+        <a href="home.html">Home</a>
+        <a class="active" href="Vigenere.html">Vigenere</a>
+        <a href="Kryptos.html">Kryptos</a>
+    </div>
+    <div class="mainText">
+
     <h1>A primitive Vigenère cipher thingy</h1>
     <p> This is the <a href="https://en.wikipedia.org/wiki/Vigen%C3%A8re_cipher">
     Standard Vigniere cipher</a> (one key). For the kyrptos cipher, see 
@@ -50,11 +57,12 @@
     <label for="outputText">Output:</label><br>
     <textarea id="outputText" name="outputText" readonly rows="8" cols="80"></textarea>
     <br><br>
-    <noscript><span class="redText">This page requires JavaScript to work, as GitHub Pages does 
-        <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#static-site-generators">not support server-side computation.</a></span></noscript>
-    <br><br>
-    <noscript><span class="redText">You can view the sourcecode of this page <a href="https://github.com/flashdas/cipher">here.</a></span></noscript>
 
-    
+    <noscript><span class="redText">This page requires JavaScript to work, as GitHub Pages does 
+        <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#static-site-generators">not support server-side computation.</a>
+    <br><br>
+    You can view the sourcecode of this page <a href="https://github.com/flashdas/cipher">here.</a></span></noscript>
+
+    </div>
 </body>
 </html>
