--- a/home.html
+++ b/home.html
@@ -9,16 +9,24 @@
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
-    <h1>A website with some things I've made. Thank you GitHub for hosting for free.</h1>
-    <br>
-    <h2 id="ciphers">Ciphers</h2>
-    <p>
-        A tool to encrypt or decrypt vigenere ciphers. <a href="Vigenere.html">link.</a>
-        <br><br>
-        A tool to encrypt or decrypt the kryptos version of a vigenere cipher. <a href="Kryptos.html">link.</a>
-        <br><br>
+    <div class="topnav">
+        <a class="active" href="home.html">Home</a>
+        <a href="Vigenere.html">Vigenere</a>
+        <a href="Kryptos.html">Kryptos</a>
+    </div>
 
-
-    </p>
+    <div class="mainText">
+        <h1>A website with some things I've made. Thank you GitHub for hosting for free.</h1>
+        <br>
+        <!-- 
+        <h2 id="ciphers">Ciphers</h2>
+        <p>
+            A tool to encrypt or decrypt vigenere ciphers. <a href="Vigenere.html">link.</a>
+            <br><br>
+            A tool to encrypt or decrypt the kryptos version of a vigenere cipher. <a href="Kryptos.html">link.</a>
+            <br><br>
+        </p>
+        -->
+    </div>
 </body>
 </html>
