Fixed share button.
Implemented encodeURIComponent in the share function to fix issue
	with returns in shared content.
Removed extra misplaced shareable tag in Kryptos.html
Removed debugging console.log from share funciton.

--- a/Kryptos.html
+++ b/Kryptos.html
@@ -59,7 +59,7 @@
             <label for="decrypt">Decrypt</label>
             <input type="radio" name="type" id="decrypt" checked onClick="kryptos()">
             <br>
-            <label for="encrypt" class= "shareable">Encrypt</label>
+            <label for="encrypt">Encrypt</label>
             <input type="radio" name="type" id="encrypt" onClick="kryptos()">
             
         </form>
