--- a/Vigenere.html
+++ b/Vigenere.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vigenère Cipher</title>
     <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="ciphy.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
-
-    
 
 </head>
 
 <body onload="v1(); setUrlParams();VigenereCipher();">
-    <div class="topnav">
-        <a href="home.html">Home</a>
-        <a class="active" href="Vigenere.html">Vigenere</a>
-        <a href="Kryptos.html">Kryptos</a>
+
+    <div id="SiteNavigation" class="topnav">
+        <a href="home.html">Homepage</a>
+        <a href="menu.html">List of Pages</a>
     </div>
+    <div id="nav"></div>
+    <div id="navigation"></div>
+    <input type="button" value="Button" onClick="loadNav();">
+
+
     <div class="mainText">
 
     <h1>A primitive Vigenère cipher thingy</h1>
@@ -67,5 +69,10 @@
     You can view the sourcecode of this page <a href="https://github.com/flashdas/cipher">here.</a></span></noscript>
 
     </div>
+
+
+    <script type="text/javascript" src="ciphy.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="misc.js"></script>
 </body>
 </html>
