changed topbar menu to load menu,html via jquery
Makes it easier to add new pages to the nav bar in all
	other pages (only need to update menu.html)
Using javascript to load the navbar adds a annoying flicker on
	page load, should try to remove later.

--- a/Kryptos.html
+++ b/Kryptos.html
@@ -6,15 +6,16 @@
     <title>Kryptos Vigenère Cipher</title>
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="ciphy.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="misc.js"></script>
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body onload="k1(); setUrlParams(); kryptos();">
-    <div class="topnav">
-        <a href="home.html">Home</a>
-        <a href="Vigenere.html">Vigenere</a>
-        <a class="active" href="Kryptos.html">Kryptos</a>
+    <div id="SiteNavigation" class="topnav">
+        <a href="menu.html">Home</a>
     </div>
+
     <div class="mainText">
 
     <h1>Kryptos </h1>
@@ -83,5 +84,7 @@
         for the most up to date info.
     </p>
     </div>
+
+    
 </body>
 </html>
