--- a/home.html
+++ b/home.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <!--<script type="text/javascript" src="ciphy.js"></script>-->
     <link rel="icon" type="image/png" href="favicon.png">
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="misc.js"></script>
 </head>
 <body>
-    <div class="topnav">
-        <a class="active" href="home.html">Home</a>
-        <a href="Vigenere.html">Vigenere</a>
-        <a href="Kryptos.html">Kryptos</a>
+    <div id="SiteNavigation" class="topnav">
+        <a href="menu.html">Home</a>
     </div>
 
     <div class="mainText">
