--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,11 @@
-<ul class="topnav">
-    <li><a href="home.html">Home</a></li>
-    <li><a class="active" href="Vigenere.html">Vigenere</a></li>
-    <li><a href="Kryptos.html">Kryptos</a></li>
-</ul>
-ahhhhhhhhh why this no work
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="topnav">
+    <a href="home.html">Home</a>
+    <a href="Vigenere.html">Vigenere</a>
+    <a href="Kryptos.html">Kryptos</a>
+    </div>
+</body>
