--- a/Vigenere.html
+++ b/Vigenere.html
@@ -6,18 +6,17 @@
     <title>Vigenère Cipher</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="favicon.png">
+    <script type="text/javascript" src="ciphy.js"></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="misc.js"></script>
 
 </head>
 
 <body onload="v1(); setUrlParams();VigenereCipher();">
 
     <div id="SiteNavigation" class="topnav">
-        <a href="home.html">Homepage</a>
-        <a href="menu.html">List of Pages</a>
+        <a href="menu.html">Home</a>
     </div>
-    <div id="nav"></div>
-    <div id="navigation"></div>
-    <input type="button" value="Button" onClick="loadNav();">
 
 
     <div class="mainText">
@@ -71,8 +70,6 @@
     </div>
 
 
-    <script type="text/javascript" src="ciphy.js"></script>
-    <script type="text/javascript" src="jquery.min.js"></script>
-    <script type="text/javascript" src="misc.js"></script>
+
 </body>
 </html>
