Fixed nav bar without javascript
Changed the html verison of the navbar to be consistent across pages
	and link to both home and menu.html. This is replaced by
	menu.html if javascript is enabled.

--- a/Kryptos.html
+++ b/Kryptos.html
@@ -13,7 +13,8 @@
 
 <body onload="k1(); setUrlParams(); kryptos();">
     <div id="SiteNavigation" class="topnav">
-        <a href="menu.html">Home</a>
+        <a href="home.html">Home</a>
+        <a href="menu.html">Navigation bar that normally loads via javascript</a>
     </div>
 
     <div class="mainText">
