--- a/Vigenere.html
+++ b/Vigenere.html
@@ -15,7 +15,8 @@
 <body onload="v1(); setUrlParams();VigenereCipher();">
 
     <div id="SiteNavigation" class="topnav">
-        <a href="menu.html">Home</a>
+        <a href="home.html">Home</a>
+        <a href="menu.html">Navigation bar that normally loads via javascript</a>
     </div>
 
 
