--- a/home.html
+++ b/home.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div id="SiteNavigation" class="topnav">
-        <a href="menu.html">Home</a>
+        <a href="home.html">Home</a>
+        <a href="menu.html">Navigation bar that normally loads via javascript</a>
     </div>
 
     <div class="mainText">
