--- a/home.html
+++ b/home.html
@@ -17,6 +17,14 @@
     </div>
 
     <div class="mainText">
+        <noscript>
+            <span class="redText"><br>This page requires JavaScript to work, as
+                <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages#static-site-generators">
+                GitHub Pages</a> does not support server-side computation.
+            <br><br>
+            You can view the sourcecode of this page <a href="https://github.com/flashdas/cipher">here.</a></span>
+        </noscript>
+        
         <h1>A website with some things I've made. Thank you GitHub for hosting for free.</h1>
         <br>
         <!-- 
