Stared adding  demogame.html
Fixed some typos in comments
Removed unused navbar js function
Removed debugging console.log statements
Updated home.html text

--- a/home.html
+++ b/home.html
@@ -27,6 +27,13 @@
         
         <h1>A website with some things I've made. Thank you GitHub for hosting for free.</h1>
         <br>
+        <p>This is a playground for me to try thingys related to web development.
+            It started as way to try to understand a cipher puzzle from
+            a tabletop <a href="http://fairfieldproject.wikidot.com/">rpg</a>, (hence
+            the focus on old text ciphers), but quickly  turned into a 
+            place to play with javascript and html in a place where I can show it to
+            people without having the computer with the IDE next to me.
+        </p>
         <!-- 
         <h2 id="ciphers">Ciphers</h2>
         <p>
