--- a/menu.html
+++ b/menu.html
@@ -7,5 +7,6 @@
     <a href="home.html">Home</a>
     <a href="Vigenere.html">Vigenere</a>
     <a href="Kryptos.html">Kryptos</a>
+    <a href="demogame.html">Game</a>
     </div>
 </body>
